add link to spatial slides

--- a/course.qmd
+++ b/course.qmd
@@ -16,49 +16,49 @@ title: "Course overview"
 
 # Bulk RNA sequence analysis (Day 3, Mon.)
 
-* [Introduction to DNA and RNA sequencing lecture slides (Obi Griffith and Malachi Griffith)](https://github.com/griffithlab/rnabio.org/blob/master/assets/lectures/cri/2025/Day3-IntroToRNA%2BDNA.pdf)
+-   [Introduction to DNA and RNA sequencing lecture slides (Obi Griffith and Malachi Griffith)](https://github.com/griffithlab/rnabio.org/blob/master/assets/lectures/cri/2025/Day3-IntroToRNA%2BDNA.pdf)
 
-1. [Introduction to rnabio.org](https://rnabio.org/) and [bulk RNAseq dataset](https://rnabio.org/module-01-inputs/0001/05/01/RNAseq_Data/) (Lead: Obi/Malachi)
+1.  [Introduction to rnabio.org](https://rnabio.org/) and [bulk RNAseq dataset](https://rnabio.org/module-01-inputs/0001/05/01/RNAseq_Data/) (Lead: Obi/Malachi)
 
-2. [Introduction to IGV](https://rnabio.org/module-02-alignment/0002/05/02/AlignVis_IGV/) (Lead: Malachi)
+2.  [Introduction to IGV](https://rnabio.org/module-02-alignment/0002/05/02/AlignVis_IGV/) (Lead: Malachi)
 
-3. [Differential Expression Analysis (DESeq2)](https://rnabio.org/module-03-expression/0003/03/03/Differential_Expression-DESeq2/) (Lead: Malachi)
+3.  [Differential Expression Analysis (DESeq2)](https://rnabio.org/module-03-expression/0003/03/03/Differential_Expression-DESeq2/) (Lead: Malachi)
 
-4. [Differential Expression Visualization (DESeq2)](https://rnabio.org/module-03-expression/0003/04/02/DE_Visualization-DESeq2/) (Lead: Zach)
+4.  [Differential Expression Visualization (DESeq2)](https://rnabio.org/module-03-expression/0003/04/02/DE_Visualization-DESeq2/) (Lead: Zach)
 
-5. [Differential Expression Visualization (Advanced R)](https://rnabio.org/module-03-expression/0003/04/03/DE_Visualization_AdvancedR/) (Lead: Obi)
+5.  [Differential Expression Visualization (Advanced R)](https://rnabio.org/module-03-expression/0003/04/03/DE_Visualization_AdvancedR/) (Lead: Obi)
 
-6. [Pathway Analysis](https://rnabio.org/module-03-expression/0003/05/01/DE_Pathway_Analysis/) (Lead: Obi)
+6.  [Pathway Analysis](https://rnabio.org/module-03-expression/0003/05/01/DE_Pathway_Analysis/) (Lead: Obi)
 
-7. [Batch Correction - brief introduction](https://rnabio.org/module-03-expression/0003/06/02/Batch-Correction/) (Lead: Malachi)
+7.  [Batch Correction - brief introduction](https://rnabio.org/module-03-expression/0003/06/02/Batch-Correction/) (Lead: Malachi)
 
 # Single cell RNA sequencing (Day 4, Tue. - Day 5, Wed.)
 
-* [Introduction to scRNA sequencing technology lecture slides (Obi Griffith)](https://github.com/griffithlab/rnabio.org/blob/master/assets/lectures/cri/2025/Day4-IntroToSCRNA.pdf)
-* [Introduction to scRNA sequencing analysis lecture slides (Malachi Griffith)](https://github.com/griffithlab/rnabio.org/blob/master/assets/lectures/cri/2025/Day5-AdvancedSCRNA.pdf)
+-   [Introduction to scRNA sequencing technology lecture slides (Obi Griffith)](https://github.com/griffithlab/rnabio.org/blob/master/assets/lectures/cri/2025/Day4-IntroToSCRNA.pdf)
+-   [Introduction to scRNA sequencing analysis lecture slides (Malachi Griffith)](https://github.com/griffithlab/rnabio.org/blob/master/assets/lectures/cri/2025/Day5-AdvancedSCRNA.pdf)
 
-1. [Introduction to scRNAseq dataset](https://rnabio.org/module-08-scrna/0008/01/02/scRNA_Data/) (Lead: Malachi)
+1.  [Introduction to scRNAseq dataset](https://rnabio.org/module-08-scrna/0008/01/02/scRNA_Data/) (Lead: Malachi)
 
-2. [QA/QC and Clustering](https://rnabio.org/module-08-scrna/0008/02/01/QA_clustering/) (Lead: Evelyn)
+2.  [QA/QC and Clustering](https://rnabio.org/module-08-scrna/0008/02/01/QA_clustering/) (Lead: Evelyn)
 
-3. [Cell Type Annotation](https://rnabio.org/module-08-scrna/0008/03/01/Cell_annotation/) (Lead: Kelsy)
+3.  [Cell Type Annotation](https://rnabio.org/module-08-scrna/0008/03/01/Cell_annotation/) (Lead: Kelsy)
 
-4. [Differential Expression](https://rnabio.org/module-08-scrna/0008/04/01/DE_analysis/) (Lead: Kartik)
+4.  [Differential Expression](https://rnabio.org/module-08-scrna/0008/04/01/DE_analysis/) (Lead: Kartik)
 
-5. [Gene Set Enrichment](https://rnabio.org/module-08-scrna/0008/05/01/Gene_set_enrichment/) (Lead: Kartik)
+5.  [Gene Set Enrichment](https://rnabio.org/module-08-scrna/0008/05/01/Gene_set_enrichment/) (Lead: Kartik)
 
-6. [Cancer Cell Identification](https://rnabio.org/module-08-scrna/0008/06/01/Cancer_cell_identification/) (Lead: Kartik)
+6.  [Cancer Cell Identification](https://rnabio.org/module-08-scrna/0008/06/01/Cancer_cell_identification/) (Lead: Kartik)
 
-7. [Trajectory Analysis](https://rnabio.org/module-08-scrna/0008/07/01/Differentiation_trajectory/) (Lead: Evelyn)
+7.  [Trajectory Analysis](https://rnabio.org/module-08-scrna/0008/07/01/Differentiation_trajectory/) (Lead: Evelyn)
 
-8. [TCR/BCR Repertoire Analysis](https://rnabio.org/module-08-scrna/0008/08/01/TCR_BCR_analysis/) (Lead: Obi)
+8.  [TCR/BCR Repertoire Analysis](https://rnabio.org/module-08-scrna/0008/08/01/TCR_BCR_analysis/) (Lead: Obi)
 
 # Spatial Transcriptomics (Day 6 - Thurs.)
 
-1. [Spatial Transcriptomics](course/spatial/01_spatial_intro.qmd)
+1.  [Spatial Transcriptomics](course/spatial/01_spatial_intro.qmd)
 
+    [**Slides**](https://github.com/Cancer-Research-Institute/CRI_bioinformatics_workshop/blob/main/course/slides/CRI_Day_6_Spatial_Transcriptomics.pdf)
 
 # Prior versions of the CRI Bioinformatics Bootcamp
 
-* [2024](course_2024.qmd)
-
+-   [2024](course_2024.qmd)
